# The-Aegis-Forge

./: .gitignore  AEGIS_FORGE_MASTER.md  AGENTIC_AI_AND_LLMS.md  GROQ_SETUP.md  QUICKSTART.md  README.md  TESTING.md  frontend.md  fsir_AJ_7ZhAgkwAw59E.json  fsir_AJ_d4pHUbn4ki3K.json  fsir_AJ_pPGNiwS3Btnk.json  fsir_AJ_sEi7UPrRGWHF.json  fsir_AJ_xR7ZaGzRZ7KW.json  license.md  pyproject.toml  system_analysis_report.md  verify_code_logging.py
.github/workflows/: evals.yml
agents/: incident_lead.py
app/: debug_agent.py  main.py
app/agents/: crisis_generator.py  crisis_popup.py  incident_lead.py  mole.py  observer.py  pressure.py  prompts.py  question_generator.py
app/analysis/: dqi_calculator.py  pdf_generator.py  pipeline.py  schemas.py  social_verifier.py
app/core/: end_detector.py  interview_timer.py  scenario_generator.py
app/logging/: audit_logger.py  questions_logger.py
app/rag/: scenarios.json  scenarios.py
app/resume/: __init__.py  loader.py
apps/agents/: crisis_generator.py  observer.py  pressure.py  question_generator.py
apps/resume/: loader.py
backend/: livekit_dispatch.py  main.py  resume_validator.py
backend/agents/: __init__.py  personas.py  prompts.py
backend/core/: __init__.py  graph.py  state.py
backend/database/: __init__.py  scenarios.py
backend/funnel/: __init__.py  pathway_engine.py  pipeline.py
deploy/lightsail/: README.md
docs/: BACKEND_CHANGES_FOR_DEVRAJ.md  DEVRAJ_INTEGRATION_GUIDE.md  FRONTEND_AUTO_IDE_GUIDE.md  FRONTEND_PRESSURE_POPUP_GUIDE.md  FRONTEND_ROLE_SELECTION_GUIDE.md  FSIR_DOWNLOAD_GUIDE_FOR_DEVRAJ.md  SOCIAL_INTEGRATION_README.md
documentation/: AEGIS_FORGE_MASTER.md  AegisForge_Masterfile.txt
frontend/: extract.py  package-lock.json  package.json  test_fetch.js
frontend/app/: globals.css  layout.tsx  (+1 more)
scripts/: extract_pdf.py  inspect_api.py  manual_dispatch_tool.py  simulate_full_flow.py  test_context_injection.py  test_dsa_rubric.py  test_focus_loading.py  verify_agents.py  verify_god_mode.py  verify_ke.py
tests/: debug_dqi.py  test_pdf_gen.py  verify_agent_graph.py  verify_agent_interconnection.py
utility_scripts/: generate_mock_pdf.py  test_api_integration.py
web/: package-lock.json  package.json
(+87 files in other folders)
